[package]
name = "Learning_Rust"
version = "0.1.0"
authors = ["al-amin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "learn"
path = "src/bin/main.rs"

[[bin]]
name = "7"
path = "src/bin/7_reverse_int.rs"

[[bin]]
name = "13"
path = "src/bin/13_palindrome.rs"

[[bin]]
name = "14"
path = "src/bin/14_Longest_Common_Prefix.rs"

[[bin]]
name = "26"
path = "src/bin/26_Remove_Duplicates_from_Sorted_Array.rs"